@@ -135,6 +135,12 @@ CVS code -
 	- Properly handle combined meta and escape sequences, so that
 	  e.g. Meta-+ will work properly when the + is on the numeric
 	  keypad and NumLock is off. (DLR)
+	- Translate extended keypad keys to their ASCII equivalents even
+	  when we hit Escape once or twice before typing them, for
+	  consistency. (DLR)
+	- If they're defined, translate KEY_SUP into NANO_PREVLINE_KEY
+	  and KEY_SDOWN into NANO_NEXTLINE_KEY, since they are sometimes
+	  generated by Shift-Up and Shift-Down. (DLR)
   display_string()
 	- Properly handle buf[start_index]'s being a null terminator.
 	  (DLR)
